# dtf-wana

./: .gitignore  AGENTS.md  CHANGELOG.md  DESARROLLO-UN-CLIC.md  README.md  RELEASING.md  VERSION_ESTABLE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
docs/: 01-PRODUCTO.md  02-GUIA-DE-USUARIO.md  03-FUNCIONALIDADES.md  04-PIPELINE-DE-PROCESAMIENTO.md  05-MODO-LOTE.md  06-ARQUITECTURA.md  07-MAPA-DEL-CODIGO.md  08-ESTADO-Y-DATOS.md  09-FORMATOS-Y-EXPORTACION.md  10-ERRORES-Y-CASOS-LIMITE.md  11-PRUEBAS.md  12-DEPLOY-Y-DISTRIBUCION.md  13-TROUBLESHOOTING.md  14-SEGURIDAD-Y-PRIVACIDAD.md  15-ROADMAP.md  AI_MODELS.md  ALPHA_PROCESSING.md  ARCHITECTURE.md  FILE_FORMAT_SUPPORT.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSTALL_WINDOWS.md  MCP_INTEGRATION.md  MCP_SECURITY.md  TEST_PLAN.md
scripts/: install-birefnet-model.ps1  install-dev-shortcut.ps1  start-dev.ps1  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/alpha_engine/: mod.rs
src-tauri/src/application/: command_bus.rs  jobs.rs  mod.rs  permissions.rs  revisions.rs  state.rs
src-tauri/src/background_removal/: color.rs  inference.rs  mod.rs  selection.rs  state.rs  types.rs
src-tauri/src/commands/: background_removal.rs  dispatcher.rs  document.rs  jobs.rs  mod.rs  residue.rs
src-tauri/src/edge_polish_engine/: mod.rs
src-tauri/src/image_engine/: document.rs
src-tauri/src/residue_engine/: mod.rs
(+76 files in other folders)
