[package]
name = "dtf-pro-studio"
version = "0.1.0"
description = "Preparación profesional de imágenes para DTF"
authors = ["DTF Pro Studio"]
edition = "2021"

[lib]
name = "dtf_pro_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
tauri = { version = "2", features = [] }
thiserror = "2"

