[package]
name = "dtf-pro-studio"
version = "0.4.4"
description = "Preparación profesional de imágenes para DTF"
authors = ["DTF Pro Studio"]
edition = "2021"

[lib]
name = "dtf_pro_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp"] }
png = "0.18"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "2"

[profile.dev.package.dtf-pro-studio]
opt-level = 2
